--- a/public/index.html
+++ b/public/index.html
@@ -11,18 +11,18 @@
 
 
 <meta name="author" content="Johnson Lai">
-<meta name="description" content="John Doe&#39;s personal website">
+<meta name="description" content="Johnson · Crypto x AI">
 <meta name="keywords" content="blog,developer,personal">
 
 
   <meta name="twitter:card" content="summary">
   <meta name="twitter:title" content="superoo7">
-  <meta name="twitter:description" content="John Doe&#39;s personal website">
+  <meta name="twitter:description" content="Johnson · Crypto x AI">
 
 <meta property="og:url" content="http://www.superoo7.com/">
   <meta property="og:site_name" content="superoo7">
   <meta property="og:title" content="superoo7">
-  <meta property="og:description" content="John Doe&#39;s personal website">
+  <meta property="og:description" content="Johnson · Crypto x AI">
   <meta property="og:locale" content="en">
   <meta property="og:type" content="website">
 
