--- a/public/about/index.html
+++ b/public/about/index.html
@@ -241,6 +241,7 @@ Previous experience Link to heading [11/2023 - Now] Chasm Network Cofounder &amp
 <li>(Polygon) Pool Prize</li>
 </ul>
 </li>
+<li>Utopian Hackathon 2018: <a href="https://swallet.netlify.app/"  class="external-link" target="_blank" rel="noopener">Steem Web Wallet</a></li>
 </ul>
 <h2 id="open-source-projects">
   Open Source Projects
@@ -251,6 +252,7 @@ Previous experience Link to heading [11/2023 - Now] Chasm Network Cofounder &amp
 </h2>
 <ul>
 <li><a href="https://github.com/superoo7/go-gecko"  class="external-link" target="_blank" rel="noopener">go-gecko</a></li>
+<li><a href="https://github.com/superoo7/steem_web_wallet"  class="external-link" target="_blank" rel="noopener">steem-web-wallet</a></li>
 </ul>
 
   </article>
